<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:exported="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Profile">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/layoutt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        >

        <RelativeLayout
            android:id="@+id/imguser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/circule_border"
            >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"

                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"


                android:background="@drawable/circule"

                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                android:src="@drawable/profilepic"/>



        </RelativeLayout>
<TextView
    android:id="@+id/nameid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/imguser"
    android:layout_centerHorizontal="true"
    android:text="@string/doctor"
    android:fontFamily="sans-serif-condensed-light"
    android:layout_marginTop="10dp"
    android:textSize="32sp"
    android:textColor="@color/white"/>

        <TextView
            android:id="@+id/speciality_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imguser"
            android:layout_centerHorizontal="true"
            android:text="@string/sepc"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_marginTop="50dp"
            android:textSize="32sp"
            android:textColor="@color/speciality"

            />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todoo"

            android:onClick="openeiditing"
            android:scaleType="centerInside"
            android:visibility="visible"
            android:src="@drawable/ic_baseline_edit_24" />


    </RelativeLayout>



    <RelativeLayout
        android:layout_below="@id/layoutt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



         <LinearLayout

             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:orientation="vertical"
             android:layout_marginRight="30dp"
             android:layout_marginTop="20dp"
             >


             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >

                 <TextView

                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                       android:text="@string/email"
                     android:textColor="@color/heading"
                     android:textSize="20sp"/>

                 <TextView
                     android:id="@+id/email_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text="@string/nada_gmail_com"
                     android:textColor="@color/Black"
                     android:textSize="25sp"/>

                 <EditText
                     android:id="@+id/editemail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/enter_a_new_email"
                     android:inputType="textPassword"
                     android:layout_marginRight="18dp"
                     android:layout_marginEnd="18dp"
                     android:autofillHints=""
                     android:visibility="invisible"

                     />


        <View

    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="15dp"
    android:background="@color/gary"/>


             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >


                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text="@string/phone_number"
                     android:textColor="@color/heading"
                     android:textSize="20sp"/>

                 <TextView
                     android:id="@+id/phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text="@string/_02"
                     android:textColor="@color/Black"
                     android:textSize="25sp"/>


                 <EditText
                     android:id="@+id/eidtphone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:hint="@string/enter_a_new_phone"

                     android:autofillHints=""
                     android:visibility="invisible"
                     />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="15dp"
                     android:background="@color/gary"/>
             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >


                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text="@string/gender"
                     android:textColor="@color/heading"
                     android:textSize="20sp"/>

                 <TextView
                     android:id="@+id/gender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text="@string/m_f"
                     android:textColor="@color/Black"
                     android:textSize="25sp"/>


                 <EditText
                     android:id="@+id/eidtgender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:hint="@string/enter_a_gender"
                     android:autofillHints=""
                     android:visibility="invisible"
                     />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="12dp"
                     android:background="@color/gary"/>
             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >


                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text="@string/birthday"
                     android:textColor="@color/heading"
                     android:textSize="20sp"/>

                 <TextView
                     android:id="@+id/birthdayid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text=""
                     android:textColor="@color/Black"
                     android:textSize="25sp"/>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="15dp"
                     android:background="@color/gary"/>
             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >


                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text="@string/about"
                     android:textColor="@color/heading"
                     android:textSize="20sp"/>

                 <TextView
                     android:id="@+id/des"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text="@string/writedes"
                     android:textColor="@color/Black"
                     android:textSize="25sp"/>

                 <EditText
                     android:id="@+id/editdescr"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:hint="@string/enter_a_new_description"
                     android:importantForAutofill="no"
                     android:visibility="invisible"
                     />

                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="15dp"
                     android:background="@color/gary"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >


                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text="@string/calenderapp"
                     android:textColor="@color/heading"
                     android:textSize="20sp"/>

                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="15dp"
                     android:background="@color/gary"/>
                 <TextView
                     android:id="@+id/birthday"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:text=""
                     android:textColor="@color/Black"
                     android:textSize="25sp"/>
                 <Button
                     android:id="@+id/submitedit"
                     android:layout_width="150dp"
                     android:layout_height="50dp"
                 android:background="@color/gradend"
                   android:text="@string/sumbitedit"
android:visibility="invisible"
                     ></Button>

             </LinearLayout>

         </LinearLayout>


    </RelativeLayout>




</RelativeLayout>
    </ScrollView>


